fixed styles so that elements align correctly

--- a/src/htdocs/research/index.scss
+++ b/src/htdocs/research/index.scss
@@ -1,3 +1,3 @@
 .two-up > :nth-child(2n+1) {
-  clear: left;
+  clear: both;
 }
